# stereo-vision-agri-robotics

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: architecture.md
notebooks/: 02_low_light_dataset_experiments.ipynb
scripts/: download_sample_dataset.py
src/stereo_vision_agri_robotics/: __init__.py  config.py  core.py
src/stereo_vision_agri_robotics/datasets/: __init__.py  loaders.py
src/stereo_vision_agri_robotics/pipeline/: __init__.py  calibration.py  disparity.py  postprocessing.py
src/stereo_vision_agri_robotics/utils/: __init__.py  io.py
tests/: test_core.py  test_pipeline.py
