[build-system]
requires = ["setuptools>=42","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stereo-vision-agri-robotics"
version = "0.0.1"
description = "Stereo vision utilities for agricultural robotics (placeholder)."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [ { name = "Fatemerjn" } ]
