[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stereo-vision-agri-robotics"
version = "0.1.0"
description = "Stereo vision utilities and research scaffolding for agricultural robotics."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Fatemerjn" }]
keywords = ["stereo vision", "agriculture", "robotics", "computer vision"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
    "numpy>=1.23",
    "opencv-python>=4.8",
    "scikit-image>=0.21",
]

[project.optional-dependencies]
dev = [
    "black>=23.7",
    "mypy>=1.5",
    "pytest>=7.0",
    "ruff>=0.0.290",
]

[project.urls]
Homepage = "https://github.com/Fatemerjn/stereo-vision-agri-robotics"
Documentation = "https://github.com/Fatemerjn/stereo-vision-agri-robotics/tree/main/docs"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
line-length = 88
src = ["src", "tests"]
target-version = "py39"
